fix: scrollbars

--- a/audio-player/css/style.css
+++ b/audio-player/css/style.css
@@ -5,8 +5,8 @@
 body {
 	display: flex;
 	justify-content: center;
-	width: 100vw;
-	height: 100vh;
+	width: 90vw;
+	height: 90vh;
 	align-items: center;
 	background-image: url(/assets/img/01-prekrasnoe.jpg);
 	background-size: cover;
